--- a/Lab_1.vcxproj
+++ b/Lab_1.vcxproj
@@ -145,15 +145,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="GraphicObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Simulation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="Display.h" />
+    <ClInclude Include="GraphicObject.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Simulation.h" />
   </ItemGroup>
