--- a/Lab_1.vcxproj
+++ b/Lab_1.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="GraphicObject.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Simulation.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Data.h" />
     <ClInclude Include="Display.h" />
     <ClInclude Include="GraphicObject.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Simulation.h" />
   </ItemGroup>
